<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="P_AutoMode" Id="{3a6df21b-1a42-48ce-9146-75164385b2da}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_AutoMode
VAR
	tonCycle				: TON; //timer implemented to reduce CPU usage
	
	bIsDay			: BOOL := FALSE;
	bIsNight		: BOOL := FALSE;
	
	rtIsDay			: R_TRIG;
	rtIsNight		: R_TRIG;			
	
	ft_arrManual	: ARRAY [1..byStreetLampsCount] OF F_TRIG;
	i				: INT;	//for loop iterator
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//init tonCycle
tonCycle(IN:=NOT tonCycle.Q, PT:=T#1S);
//init rising edge detection
rtIsDay(CLK := bIsDay);
rtIsNight(CLK := bIsNight);

//check day-night status every 1S
IF tonCycle.Q THEN
	
	//if it is a night
	IF F_IsNight() THEN
		//set flags accordingly
		bIsNight := TRUE;
		bIsDay := FALSE;
	//else, it is a day
	ELSE
		//set flags accordingly
		bIsNight := FALSE;
		bIsDay := TRUE;
	END_IF

END_IF

//if a night has come
IF rtIsNight.Q THEN
	//turn lights ON
	//if they are not in manual mode	
	IF NOT GVL_IO.arrStreetLamps[1].bManualCtrl  THEN GVL_IO.arrStreetLamps[1].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 1];  END_IF
	IF NOT GVL_IO.arrStreetLamps[2].bManualCtrl  THEN GVL_IO.arrStreetLamps[2].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 2];  END_IF
	IF NOT GVL_IO.arrStreetLamps[3].bManualCtrl  THEN GVL_IO.arrStreetLamps[3].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 3];  END_IF
	IF NOT GVL_IO.arrStreetLamps[4].bManualCtrl  THEN GVL_IO.arrStreetLamps[4].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 4];  END_IF
	IF NOT GVL_IO.arrStreetLamps[5].bManualCtrl  THEN GVL_IO.arrStreetLamps[5].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 5];  END_IF
	IF NOT GVL_IO.arrStreetLamps[6].bManualCtrl  THEN GVL_IO.arrStreetLamps[6].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 6];  END_IF
	IF NOT GVL_IO.arrStreetLamps[7].bManualCtrl  THEN GVL_IO.arrStreetLamps[7].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 7];  END_IF
	IF NOT GVL_IO.arrStreetLamps[8].bManualCtrl  THEN GVL_IO.arrStreetLamps[8].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 8];  END_IF
	IF NOT GVL_IO.arrStreetLamps[9].bManualCtrl  THEN GVL_IO.arrStreetLamps[9].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 9];  END_IF
	IF NOT GVL_IO.arrStreetLamps[10].bManualCtrl THEN GVL_IO.arrStreetLamps[10].nLevel := GVL_IO.arrScenesStreetLampsLevels[5, 10]; END_IF

	//turn one street lamp ON
	GVL_IO.bStreetLamp_DO1 := TRUE;
END_IF

//if a day has come
IF rtIsDay.Q THEN
	
	//and disable manual mode
	bBACnet_ResetManual := TRUE;
	
	//turn all lights OFF
	GVL_IO.arrStreetLamps[1].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[2].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[3].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[4].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[5].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[6].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[7].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[8].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[9].nLevel  := c_byBrightness_Day;
	GVL_IO.arrStreetLamps[10].nLevel := c_byBrightness_Day;
	
	//turn one street lamp OFF
	GVL_IO.bStreetLamp_DO1 := FALSE;
	
END_IF

//special case - exit manual mode
//when manual mode is turned off
//return brightness level to auto mode level 
FOR i := 1 TO byStreetLampsCount BY 1 DO
	//init falling edge detection
	ft_arrManual[i](CLK := GVL_IO.arrStreetLamps[i].bManualCtrl);
	
	//if manual mode is being turned off
	IF ft_arrManual[i].Q THEN
		//set brightness level to auto mode on this lamp
		//in the night to c_byBrightness_Night
		IF F_IsNight() THEN
			CASE i OF
				1: 	GVL_IO.arrStreetLamps[1].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 1]; 
				2: 	GVL_IO.arrStreetLamps[2].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 2]; 
				3: 	GVL_IO.arrStreetLamps[3].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 3]; 
				4: 	GVL_IO.arrStreetLamps[4].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 4]; 
				5: 	GVL_IO.arrStreetLamps[5].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 5]; 
				6: 	GVL_IO.arrStreetLamps[6].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 6]; 
				7: 	GVL_IO.arrStreetLamps[7].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 7]; 
				8: 	GVL_IO.arrStreetLamps[8].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 8]; 
				9: 	GVL_IO.arrStreetLamps[9].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 9]; 
				10:	GVL_IO.arrStreetLamps[10].nLevel := GVL_IO.arrScenesStreetLampsLevels[5, 10];
			END_CASE
		ELSE
		//at the daylight to c_byBrightness_Day
			CASE i OF
				1: 	GVL_IO.arrStreetLamps[1].nLevel  := c_byBrightness_Day;
				2: 	GVL_IO.arrStreetLamps[2].nLevel  := c_byBrightness_Day;
				3: 	GVL_IO.arrStreetLamps[3].nLevel  := c_byBrightness_Day;
				4: 	GVL_IO.arrStreetLamps[4].nLevel  := c_byBrightness_Day;
				5: 	GVL_IO.arrStreetLamps[5].nLevel  := c_byBrightness_Day;
				6: 	GVL_IO.arrStreetLamps[6].nLevel  := c_byBrightness_Day;
				7: 	GVL_IO.arrStreetLamps[7].nLevel  := c_byBrightness_Day;
				8: 	GVL_IO.arrStreetLamps[8].nLevel  := c_byBrightness_Day;
				9: 	GVL_IO.arrStreetLamps[9].nLevel  := c_byBrightness_Day;
				10:	GVL_IO.arrStreetLamps[10].nLevel := c_byBrightness_Day;
			END_CASE
		END_IF
	END_IF
END_FOR
]]></ST>
    </Implementation>
    <LineIds Name="P_AutoMode">
      <LineId Id="101" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="115" Count="1" />
      <LineId Id="102" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="120" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="144" Count="9" />
      <LineId Id="169" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="337" Count="0" />
      <LineId Id="339" Count="0" />
      <LineId Id="338" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="234" Count="9" />
      <LineId Id="171" Count="1" />
      <LineId Id="341" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="258" Count="4" />
      <LineId Id="320" Count="0" />
      <LineId Id="264" Count="0" />
      <LineId Id="321" Count="0" />
      <LineId Id="305" Count="0" />
      <LineId Id="265" Count="11" />
      <LineId Id="306" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="309" Count="10" />
      <LineId Id="307" Count="1" />
      <LineId Id="277" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="244" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>