<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="P_MotionSensors" Id="{86ad94ed-fcc9-4be8-93ce-9c468a8c4c10}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_MotionSensors
VAR_INPUT
	bEnable		: BOOL; // if TRUE, program is active, sensors are taken into account
END_VAR
VAR
	i			: INT := 0;	// for loop iterator
	j			: INT := 0; // for loop iterator
	
	arrTOF_info	: ARRAY [1..byStreetLampsCount] OF TOF; 	// array of off-delay timers for short movement capture
	
	arrTOF		: ARRAY [1..byStreetLampsCount] OF TOF; 	// array of off-delay timers
	arrR_TRIG	: ARRAY [1..byStreetLampsCount] OF R_TRIG;	// array of rising edge trigers
	arrF_TRIG	: ARRAY [1..byStreetLampsCount] OF F_TRIG; 	// array of falling edge trigers
	
	_byBrightnessMotion		: BYTE;		//variable storing info about new brightness level, 
										//to be set, after motion sensor signal has been received
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//time independent info about motion sensors
//iterate through street lamps
FOR j := 1 TO byStreetLampsCount BY 1 DO
	//initializing off-delay timers
	arrTOF_info[j](IN := GVL_IO.arrStreetLamps[j].bMotionSensor, PT := tMotionSensorsTOF_info_PT);
	//send motion info to ST
	GVL_IO.arrStreetLamps[j].bMotionFlag := arrTOF_info[j].Q;
END_FOR

//if motion sensors are activated and it is a night
IF bEnable AND F_IsNight() THEN
	
	//iterate through street lamps
	FOR i := 1 TO byStreetLampsCount BY 1 DO
		//if lamp is not in manual mode then
		IF NOT GVL_IO.arrStreetLamps[i].bManualCtrl THEN
			
			//start timers and edge detection
			//initializing off-delay timers
			arrTOF[i](IN := GVL_IO.arrStreetLamps[i].bMotionSensor, PT := tMotionSensorsTOF_PT);
			//initializing rising edge trigers
			arrR_TRIG[i](CLK := arrTOF[i].Q);
			//initializing falling edge trigers
			arrF_TRIG[i](CLK := arrTOF[i].Q);
			
			//if rising edge at arrTOF output occured
			IF arrR_TRIG[i].Q THEN
				//depending on a lamp, the sensor belongs to
				//calculate new brightness value
				//based on auto mode value, as +50
				IF GVL_IO.arrScenesStreetLampsLevels[5, i] < 205 THEN
					_byBrightnessMotion := GVL_IO.arrScenesStreetLampsLevels[5, i] + 50;
				ELSE
					_byBrightnessMotion := 254;
				END_IF
			
				//depending on a lamp, the sensor belongs to
				CASE i OF
					//set the lamp _byBrightnessMotion level
					1: GVL_IO.arrStreetLamps[1].nLevel  := _byBrightnessMotion;
					2: GVL_IO.arrStreetLamps[2].nLevel  := _byBrightnessMotion;
					3: GVL_IO.arrStreetLamps[3].nLevel  := _byBrightnessMotion;
					4: GVL_IO.arrStreetLamps[4].nLevel  := _byBrightnessMotion;
					5: GVL_IO.arrStreetLamps[5].nLevel  := _byBrightnessMotion;
					6: GVL_IO.arrStreetLamps[6].nLevel  := _byBrightnessMotion;
					7: GVL_IO.arrStreetLamps[7].nLevel  := _byBrightnessMotion;
					8: GVL_IO.arrStreetLamps[8].nLevel  := _byBrightnessMotion;
					9: GVL_IO.arrStreetLamps[9].nLevel  := _byBrightnessMotion;
					10:GVL_IO.arrStreetLamps[10].nLevel := _byBrightnessMotion;
				END_CASE
			//else if a falling edge at arrTOF output occured
			ELSIF arrF_TRIG[i].Q THEN
				//depending on a lamp, the sensor belongs to
				CASE i OF
					//turn the lamp in auto mode brightness
					1: GVL_IO.arrStreetLamps[1].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 1]; 
					2: GVL_IO.arrStreetLamps[2].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 2]; 
					3: GVL_IO.arrStreetLamps[3].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 3]; 
					4: GVL_IO.arrStreetLamps[4].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 4]; 
					5: GVL_IO.arrStreetLamps[5].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 5]; 
					6: GVL_IO.arrStreetLamps[6].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 6]; 
					7: GVL_IO.arrStreetLamps[7].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 7]; 
					8: GVL_IO.arrStreetLamps[8].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 8]; 
					9: GVL_IO.arrStreetLamps[9].nLevel  := GVL_IO.arrScenesStreetLampsLevels[5, 9]; 
					10:GVL_IO.arrStreetLamps[10].nLevel := GVL_IO.arrScenesStreetLampsLevels[5, 10];
				END_CASE
			END_IF
		END_IF
	END_FOR
	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="P_MotionSensors">
      <LineId Id="185" Count="0" />
      <LineId Id="179" Count="5" />
      <LineId Id="177" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="104" Count="1" />
      <LineId Id="165" Count="1" />
      <LineId Id="169" Count="4" />
      <LineId Id="167" Count="1" />
      <LineId Id="39" Count="1" />
      <LineId Id="204" Count="0" />
      <LineId Id="202" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="211" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="49" Count="6" />
      <LineId Id="47" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="134" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="137" Count="9" />
      <LineId Id="132" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="34" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>